[project]
name = "trainfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material[imaging]>=9.6.12",
    "mkdocs>=1.6.1",
    "mkdocs-rss-plugin>=1.17.1",    
]
[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pymarkdownlnt>=0.9.29",
]
[tool.pymarkdown]
disabled-rules = [
    "line-length",  
    # Add other rule IDs here as needed
]